--- a/famous-cyber-attacks/2016-comelec-data-breach.html
+++ b/famous-cyber-attacks/2016-comelec-data-breach.html
@@ -293,9 +293,9 @@
 			<div class="relative mt-48 max-w-4xl mx-auto">
 				<h4 class="text-6xl font-medium">2016 COMELEC Data Breach</h4>
                     <div class="flex items-center space-x-4 mt-4 justify-center">
-                        <a href="">Initial Discovery </a>
-                        <a href="">Common Early Exploits and Attacks</a>
-                        <a href="">The Development of Security Patching</a>
+                        <a href="">Overview </a>
+                        <a href="">Method of Attack</a>
+                        <a href="">Impact and Consequences</a>
                     </div>
 			</div>
 		</div>
@@ -315,20 +315,20 @@
                 <div class="space-y-4">
                     <h4 class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
                     <div class="grid grid-cols-2 gap-4">
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 1</h6>
                             <p>55 million voters' personal information was compromised, making them vulnerable to fraud and identity theft. Many affected people were afraid that their data will be exploited for several types of cybercrimes. The risk of phishing and scams increased when passport numbers and addresses were made public.</p>
                         </div>
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 2</h6>
                             <p>Political criticism of COMELEC officials for their carelessness and lack of cybersecurity preparedness resulted from the incident. Following the public protest, a number of officials were called to resign and faced legal prosecution. This triggered a wider demand for improved data security protocols in all branches of government.
                             </p>
                         </div>
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 3</h6>
                             <p>The scale of the breach caused international embarrassment for the Philippine government. The legitimacy of the 2016 elections and subsequent elections was impacted by a decrease in confidence in COMELEC. It highlighted how crucial cybersecurity is to maintaining national security.</p>
                         </div>
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 4</h6>
                             <p>PHP 1.2 billion (USD 23 million) had to be spent by COMELEC on victim assistance, investigations, and system updates. By selling the stolen data on the dark web, hackers might have made millions of dollars. The incident made clear that fast cybersecurity infrastructure and procedures need to be changed.
                             </p>
