--- a/famous-cyber-attacks/Yahoo-Data-Breaches.html
+++ b/famous-cyber-attacks/Yahoo-Data-Breaches.html
@@ -296,9 +296,9 @@
                 
 				<h4 class="text-6xl font-medium">Yahoo Data Breaches</h4>
                     <div class="flex items-center space-x-4 mt-4 justify-center">
-                        <a href="">Initial Discovery </a>
-                        <a href="">Common Early Exploits and Attacks</a>
-                        <a href="">The Development of Security Patching</a>
+                        <a href="">Overview </a>
+                        <a href="">Method of Attack</a>
+                        <a href="">Impact and Consequences</a>
                     </div>
 			</div>
 
@@ -317,19 +317,19 @@
                 <div class="space-y-4">
                     <h4 class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
                     <div class="grid grid-cols-2 gap-4">
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 1</h6>
                             <p>Yahoo faced significant financial consequences when Verizon reduced its acquisition price by $350 million. The final deal valued Yahoo at around $4.48 billion, a sharp decrease from the original offer. This represented one of the largest merger devaluations due to a cyber incident.</p>
                         </div>
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 2</h6>
                             <p>The breach destroyed much of Yahoo’s brand trust among users. Many users abandoned their accounts or moved to competing services due to fears over security. This severely reduced Yahoo’s active user base and advertising revenue.</p>
                         </div>
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 3</h6>
                             <p>The U.S. Securities and Exchange Commission (SEC) fined Yahoo's parent company for failing to disclose the breach sooner. This was one of the first instances where a company was penalized for delayed cyber breach disclosure. It set a legal precedent for breach notification regulations in the U.S.</p>
                         </div>
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 4</h6>
                             <p>The stolen Yahoo data was sold and distributed on underground forums. This created widespread secondary attacks like phishing, credential stuffing, and identity theft. Many users’ accounts on unrelated services were compromised because of password reuse.</p>
                         </div>
