--- a/famous-cyber-attacks/lockbit-ransom.html
+++ b/famous-cyber-attacks/lockbit-ransom.html
@@ -295,9 +295,9 @@
                 
 				<h4 class="text-6xl font-medium">LockBit Ransomware</h4>
                     <div class="flex items-center space-x-4 mt-4 justify-center">
-                        <a href="">Initial Discovery </a>
-                        <a href="">Common Early Exploits and Attacks</a>
-                        <a href="">The Development of Security Patching</a>
+                        <a href="">Overview </a>
+                        <a href="">Method of Attack</a>
+                        <a href="">Impact and Consequences</a>
                     </div>
 			</div>
 
@@ -320,20 +320,20 @@
                 <div class="space-y-4">
                     <h4 class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
                     <div class="grid grid-cols-2 gap-4">
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 1</h6>
                             <p>Healthcare institutions targeted by LockBit faced life-threatening service interruptions. Hospitals had to cancel surgeries and reroute emergency patients due to locked systems. This demonstrated the devastating impact of ransomware on critical infrastructure.</p>
                         </div>
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 2</h6>
                             <p>Businesses attacked by LockBit experienced massive operational downtime and ransom demands reaching millions of dollars. Many organizations faced public relations crises after data leaks. Some companies went bankrupt following unsuccessful recovery efforts.
                             </p>
                         </div>
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 3</h6>
                             <p>LockBit's success has encouraged the growth of the RaaS model in the cybercriminal ecosystem. More amateur hackers now have access to sophisticated ransomware tools. This has led to an overall increase in the frequency of ransomware attacks worldwide.</p>
                         </div>
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 4</h6>
                             <p>Law enforcement agencies like the FBI and Europol have launched major crackdowns against LockBit affiliates. Some affiliates have been arrested, and LockBit’s infrastructure has been temporarily disrupted. However, the group's decentralized model allows it to recover and rebrand quickly.
 
