--- a/famous-cyber-attacks/not-petya.html
+++ b/famous-cyber-attacks/not-petya.html
@@ -295,9 +295,9 @@
                 
                 <h4 class="text-6xl font-medium">Notpetya Ransomware Outbreak</h4>
 				<div class="flex items-center space-x-4 mt-4 justify-center">
-                    <a href="">Initial Discovery </a>
-                    <a href="">Common Early Exploits and Attacks</a>
-                    <a href="">The Development of Security Patching</a>
+                    <a href="">Overview </a>
+                    <a href="">Method of Attack</a>
+                    <a href="">Impact and Consequences</a>
                 </div>
 			</div>
 
@@ -319,20 +319,20 @@
                 <div class="space-y-4">
                     <h4 class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
                     <div class="grid grid-cols-2 gap-4">
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 1</h6>
                             <p>Significant operating difficulties were suffered by the multinational maritime company A.P. Moller-Maersk. Operations at ports and terminals on several continents had to be halted. Later, the business revealed that the hack had cost it up to $300 million.</p>
                         </div>
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 2</h6>
                             <p>Many banks and businesses, including supermarkets and automated teller machines, were forced offline in Ukraine. Consumers couldn't buy essentials or access financial services. Significant economic disruption and public annoyance resulted from this.
                             </p>
                         </div>
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 3</h6>
                             <p>The malware was also believed to have affected Russia's major oil corporation, Rosneft. Internal systems were still affected, even though the business stated that operations continued because of a backup system. The attack raised worries about the weaknesses in the country's infrastructure.</p>
                         </div>
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 4</h6>
                             <p>The attack brought to light the dangers of supply chain cybersecurity flaws. The main source of infection was the hacked update from MeDoc. The importance of secure software development and updating procedures was highlighted by this incident.
 
