--- a/famous-cyber-attacks/pegasus-spyware.html
+++ b/famous-cyber-attacks/pegasus-spyware.html
@@ -295,9 +295,9 @@
                 
 				<h4 class="text-6xl font-medium">Pegasus Spyware</h4>
                     <div class="flex items-center space-x-4 mt-4 justify-center">
-                        <a href="">Initial Discovery </a>
-                        <a href="">Common Early Exploits and Attacks</a>
-                        <a href="">The Development of Security Patching</a>
+                        <a href="">Overview </a>
+                        <a href="">Method of Attack</a>
+                        <a href="">Impact and Consequences</a>
                     </div>
 			</div>
 
@@ -319,20 +319,20 @@
                 <div class="space-y-4">
                     <h4 class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
                     <div class="grid grid-cols-2 gap-4">
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 1</h6>
                             <p>Journalists and human rights advocates were seriously threatened and some experienced harassment or worse as a result of surveillance. Dissidents' right to privacy was violated when private information about them was gathered without their consent. This weakened international campaigns to defend free expression and human rights.</p>
                         </div>
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 2</h6>
                             <p>By abusing Pegasus to spy on political rivals, governments harmed democratic institutions. Because of this, there was mistrust between the people and their governments, which resulted in political instability. The use of spying technology in governance also brought up ethical issues.
                             </p>
                         </div>
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 3</h6>
                             <p>In an effort to stop the abuse of Pegasus, tech giants including Apple and Facebook filed a lawsuit against NSO Group. The lawsuits brought widely used platforms' cybersecurity flaws to light. In order to shield consumers from similar risks, they also encouraged businesses to improve technology security.</p>
                         </div>
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 4</h6>
                             <p>NSO Group was placed on a blacklist by the US government, which prevented US companies from doing business with them. The extent of Pegasus's threat to national security was demonstrated by this action. It also established a standard for how governments might respond to tech firms that are claimed to have violated human rights.
 
