--- a/famous-cyber-attacks/sony-picture-hack.html
+++ b/famous-cyber-attacks/sony-picture-hack.html
@@ -295,9 +295,9 @@
                 
 				<h4 class="text-6xl font-medium">Sony Pictures</h4>
                     <div class="flex items-center space-x-4 mt-4 justify-center">
-                        <a href="">Initial Discovery </a>
-                        <a href="">Common Early Exploits and Attacks</a>
-                        <a href="">The Development of Security Patching</a>
+                        <a href="">Overview </a>
+                        <a href="">Method of Attack</a>
+                        <a href="">Impact and Consequences</a>
                     </div>
 			</div>
 
@@ -316,19 +316,19 @@
                 <div class="space-y-4">
                     <h4 class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
                     <div class="grid grid-cols-2 gap-4">
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 1</h6>
                             <p>Sony Pictures suffered major financial losses due to halted operations and remediation efforts. The cost of recovery was estimated to exceed $100 million. Insurance claims were filed, but the incident still hurt Sony’s bottom line significantly.</p>
                         </div>
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 2</h6>
                             <p>Highly sensitive employee information, including Social Security numbers and medical records, was exposed. This led to class-action lawsuits from affected employees. Sony had to offer identity protection services and settle legal claims.</p>
                         </div>
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 3</h6>
                             <p>The leaked emails caused reputational damage among Sony executives and the broader entertainment industry. Several internal discussions exposed racial comments and controversial opinions. Public relations teams had to work extensively to repair the company's image.</p>
                         </div>
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 4</h6>
                             <p>The hack raised political tensions between the U.S. and North Korea. The FBI formally attributed the attack to North Korea, leading to economic sanctions. It also marked a turning point in U.S. government policy towards cyberattacks from foreign states.</p>
                         </div>
