--- a/famous-cyber-attacks/the-aws-ddos-attack.html
+++ b/famous-cyber-attacks/the-aws-ddos-attack.html
@@ -295,9 +295,9 @@
                 
 				<h4 class="text-6xl font-medium">The AWS DDoS Attack</h4>
                     <div class="flex items-center space-x-4 mt-4 justify-center">
-                        <a href="">Initial Discovery </a>
-                        <a href="">Common Early Exploits and Attacks</a>
-                        <a href="">The Development of Security Patching</a>
+                        <a href="">Overview </a>
+                        <a href="">Method of Attack</a>
+                        <a href="">Impact and Consequences</a>
                     </div>
 			</div>
 
@@ -318,20 +318,20 @@
                 <div class="space-y-4">
                     <h4 class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
                     <div class="grid grid-cols-2 gap-4">
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 1</h6>
                             <p>To handle the massive assault flow, AWS has to implement extensive DDoS prevention measures.The attack tested AWS's defenses to the breaking point in the first quarter of 2020. Despite the size, AWS was able to keep its customers from experiencing significant service interruptions.</p>
                         </div>
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 2</h6>
                             <p>The attack made cloud service providers realize how important it is to have strong DDoS defenses. Businesses using AWS to host their services become more aware of their shared security responsibilities. It highlighted how important it is for businesses to tighten cloud setups.
                             </p>
                         </div>
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 3</h6>
                             <p>The event helped the cybersecurity community understand how the DDoS threat scenario is changing. Following the incident, reports and studies have been published to look into the vulnerabilities that were exploited. Since then, cybersecurity techniques have shifted their emphasis to recognizing and preventing reflection and amplification threats.</p>
                         </div>
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 4</h6>
                             <p>The importance of implementing a Zero-Trust strategy for network security has been highlighted by AWS and security researchers. The attack demonstrated how even little protocol flaws, such as CLDAP, might be turned into weapons. It encouraged improvements and enhancements in AI-powered, automated DDoS defense systems.
 
