--- a/famous-cyber-attacks/myspace-xss.html
+++ b/famous-cyber-attacks/myspace-xss.html
@@ -295,9 +295,9 @@
                 
 				<h4 class="text-6xl font-medium">MySpace XSS</h4>
                     <div class="flex items-center space-x-4 mt-4 justify-center">
-                        <a href="">Initial Discovery </a>
-                        <a href="">Common Early Exploits and Attacks</a>
-                        <a href="">The Development of Security Patching</a>
+                        <a href="">Overview </a>
+                        <a href="">Method of Attack</a>
+                        <a href="">Impact and Consequences</a>
                     </div>
 			</div>
 
@@ -318,20 +318,20 @@
                 <div class="space-y-4">
                     <h4 class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
                     <div class="grid grid-cols-2 gap-4">
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 1</h6>
                             <p>Within 20 hours, more than a million MySpace profiles got hacked, resulting in chaos on the social networking platform. MySpace had to temporarily shut down its platform in order to eliminate the infection and restore security. Major vulnerabilities in input validation and content sanitization procedures were revealed by the incident.</p>
                         </div>
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 2</h6>
                             <p>As part of his punishment, the attacker, Samy Kamkar, was prohibited from using the internet for a number of years. He performed 720 hours of community service, paid a $20,000 fine, and admitted guilt to a felony hacking offense. A significant legal precedent for the handling of cybercrimes via social networks was established by the case.
                             </p>
                         </div>
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 3</h6>
                             <p>The claimed vulnerability in MySpace's security procedures damaged the company's credibility. The platform's ability to protect user information and preserve site security was questioned by users. The need for improved web security standards was brought to light by rivals and security specialists.</p>
                         </div>
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 4</h6>
                             <p>Social media businesses were forced by the incident to give XSS vulnerability security top priority. Following the incident, filtering user inputs and applying stronger verification became the standard procedure. One of the most important case studies for teaching cybersecurity about online application vulnerabilities is still the Samy Worm.
                             </p>
